Changelog for GoodNews

- enabled view state for main panels (mailings, subscribers, groups, categories)
- refactored all email-template chunks (for subscription, profile and reports) for simplicity and clean design
- finally fixing all collapse problems on grid refresh when rowExpander is enabled (thanks @Alroniks)
- fixed a problem where grid refresh doesn’t properly collapse expanded rows
- changed autorefresh and workerprocess-emergency-stop buttons from splitbutton to modern chebox toggle switches
- first changes for better MODX 3 compatibility
- added new GDPR fields (activatedon, ip_activated) to subscribers export
- better UI for auto-refresh button
- better UI/UX for emergency stop of worker processes
- remastered the initialization process
- implemented a flexible setup/initialization error handling
- added a CMP for error handling
- [#60] proper handling for "no GoodNews container available" situations
- proper handling for "access denied" situations
- fixed a PHP warning in full URL conversion class
- general GDPR compliance release (1st-step)!
- make automatic inlining of CSS a setting (Gmail now supports embedded CSS, which removes the need for inline CSS in Gmail)
- fixed user related placeholders for subscription/activation email templates (now all placeholders from user object are provided)
- [#63] refactored all sample resource documents for GDPR compliance + fresh and clean HTML5
- added sample Privacy Policy and terms and Conditions resources to installer
- [#61] extended subscription process to also log activation IP + timestamp (GDPR compliance)


GoodNews 1.4.8-pl (2017-02-16)
--------------------------------------------------
- [#39] added subscribers export feature
- refined subscribers grid display (more details, better differentiability)
- [#6] added bulk actions to susbcribers grid
- fixed a critical bug in subscriber authentication (as a result from a merge conflict)


GoodNews 1.4.7-pl2 (2017-12-13)