@@ -1,5 +1,6 @@
 Changelog for GoodNews
 
+- fixed flickering in groups and categories grid on tabchange (caused by forced refresh)
 - enabled view state for main panels (mailings, subscribers, groups, categories)
 - refactored all email-template chunks (for subscription, profile and reports) for simplicity and clean design
 - finally fixing all collapse problems on grid refresh when rowExpander is enabled (thanks @Alroniks)
